# pycurse

./: .gitignore  Cargo.toml  example.py  pyproject.toml
src/: lib.rs
